--- a/screen.css
+++ b/screen.css
@@ -1,16 +1,17 @@
 body,
 html {
-    scroll-behavior: smooth;
+    scroll-behavior: smooth !important;
     margin: 0;
     padding: 0;
     background-color:#ffffff;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    letter-spacing: 2px;
+    width: auto;
 }
 
 #home {
-    height: 90vh;
-    width: 100%;
-    background-image: url('images/me-back-ground.png');
+    height: 95vh;
+    background-image: url('images/me-back-ground3.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -29,7 +30,7 @@ html {
 }
 
 #home .name h1{
-    font-size: 4em;
+    font-size: 5em;
 }
 
 #home .name .tag{
@@ -51,10 +52,6 @@ html {
     bottom: 10%;
     left: 50%; 
     font-size: large;
-}
-
-#home .discover .discover-more{
-    transform: translateX(-50%);
 }
 
 #home .discover .arrow{
@@ -116,13 +113,429 @@ section{
 }
 
 #body{
-    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+#body .body-section{
+    margin: 0;
+    padding: 0;
     width: 100%;
-    background-image: url('images/me-back-ground-blurred.jpg');
+    position: relative;
+    color: white;
+    display: flex;  
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#education-bottom{
+    padding: 60px;
+    display: flex;  
+    text-align: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 50px;
+}
+
+#education-bottom div{
+    border: 1px solid white;
+    border-radius: 5em;
+    height: 25vh;
+    transition: box-shadow 0.5s;
+}
+
+#education-bottom div:hover{
+    box-shadow: 0 0 0.5em white;
+    cursor: default;
+}
+
+#education-bottom div h3{
+    text-align: center;
+    color: white;
+}
+
+#education-bottom div ul{
+    list-style: circle;
+}
+
+#education-bottom div ul li{
+    color: #f3f3f3;
+}
+
+.school_info {
+    flex: 1;
+    text-align: center;
+}
+
+.school_info img {
+    position: relative;
+    margin: auto;
+    width: 500px;
+    height: auto; 
+    display: block;
+    margin-bottom: 10px;
+}
+
+#major{
+    font-style: italic;
+}
+
+.honors{
+    flex: 1;
+    text-align: left;
+}
+
+.classes {
+    flex: 1;
+    text-align: left;
+}
+
+.activities {
+    flex: 1;
+    text-align: left;
+}
+
+.cv-view{
+    padding: 50px;
+}
+
+.cv{
+    padding: 16px 35px;
+    margin: 10px 35px;
+    text-decoration: none;
+    border: 1px solid white;
+    border-radius: 35px;
+    letter-spacing: 2px;
+    color: #001122;
+
+    cursor: pointer;
+    position: relative;
+    background-color: white;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    transition: background-color 0.5s, color 0.5s;
+}
+
+.cv:hover {
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    box-shadow: 0 0 0.5em white;
+}
+
+.timeline{
+    margin: 5em auto;
+    max-width: 34.2em;
+}
+
+.point{
+    max-width: 34em;
+    position: relative;
+    padding-top: 2em;
+}
+
+.point div{
+    /* border: 2px solid white; */
+    background-color: #001122;
+    color: #ffffff;
+    border: 1px solid #009473;
+    border-radius: 5em;
+    padding: 2em;
+    line-height: 27px;
+    transition: box-shadow 0.5s, color 0.5s, background-color 0.5s, border 0.5s;
+    cursor: default;
+}
+
+.point div:hover{
+    background-color: white;
+    color: #001122;
+    border: #fff;
+}
+
+.point h4{
+    font-style: italic;
+}
+
+.point p{
+    line-height: 27px;
+    color: #f3f3f3;
+}
+
+.point:nth-child(odd){
+    border-left: 3px solid #009473;
+    padding-left: 3em;
+    transform: translate(17em);
+}
+
+.point:nth-child(even){
+    border-right: 3px solid #009473;
+    padding-right: 3em;
+    transform: translate(-17em);
+}
+
+.point:nth-child(odd)::before,
+.point:nth-child(even)::before{
+    content: "";
+    background: #009473;
+    width: 3em;
+    height: 3px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%);
+}
+
+.point:nth-child(odd)::before{
+    left: 1.5em;
+}
+
+.point:nth-child(even)::before{
+    right: -1.5em;
+}
+
+.point:nth-child(odd) div::before,
+.point:nth-child(even) div::before{
+    content: "";
+    background: #fff;
+    box-shadow: 0 0 0.5em white;
+    width: 0.8em;
+    height: 0.8em;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-40%) translateX(-60%);
+    border-radius: 50%;
+}
+
+.point:nth-child(odd) div::before{
+    left: 0;
+}
+
+.point:nth-child(even) div::before{
+    right: -1em;
+}
+
+.point .job-date {
+    position: absolute;
+    top: 44%;
+    transform: translateY(-50%);
+    color: whitesmoke;
+}
+
+.point:nth-child(odd) .job-date {
+    left: -18em; 
+    transform: translateY(-50%);
+}
+
+.point:nth-child(even) .job-date {
+    right: -18em; 
+    transform: translateY(-50%);
+}
+
+.spacer {
+    aspect-ratio: 960/100;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+.layer1 {
+    background-image: url('images/wave1.svg');
+}
+.layer2 {
+    background-image: url('images/wave2.svg');
+}
+
+.layer3 {
+    background-image: url('images/wave4.svg');
+}
+
+.layer4 {
+    background-image: url('images/wave5.svg');
+}
+
+.flip {
+    transform: rotate(180deg);
+}
+
+#about {
+    background: #9e9e9e;
+}
+
+#about .about-me{
+    margin: 0 10em;
+    padding: 0 0;
+    font-size: large;
+    position: relative;
+}
+#about .about-me h2{
+    font-size: 4em;
+    color: #001122;
+}
+
+.desc{
+    display: flex;  
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.desc p{
+    width: 50%;
+    padding: 2.5em;
+    font-size: 1.2em;
+    color: #f3f3f3;
+}
+
+.my-name{
+    position: relative;
+    display: inline-block;
+}
+
+.profes, .passion, .enthusiast{
+    color: #001122;
+}
+
+.my-name::after {
+    content: '';
+    position: absolute;
+    bottom: -10px; 
+    left: 0;
+    width: 100%;
+    height: 10px; 
+    background-color: #009473; 
+    transform-origin: bottom left;
+    transform: rotate(-2deg);
+  }
+
+#education {
+    background: #009473;
+}
+
+#experience {
+    background: #001122;
+}
+
+.footer {
+    background: black;
+    margin: auto;
+    text-align: center;
+}
+
+
+#personal,
+#social {
+    margin-bottom: 15px;
+}
+
+#personal a,
+#social a {
+    color: #fff; 
+    text-decoration: none; 
+    margin: 0 10px; 
+    font-size: small;
+}
+
+#social a i{
+    font-size: 30px;
+    margin: 0px 10px;
+}
+
+#Copyright p {
+    margin: 0;
+    color: white;
+    font-size: small;
+}
+
+#contact-form{
+    background-image: url('images/contact.svg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     color: white;
-    display: block;  
-    text-align: center;
+}
+
+#contact-form h1{
+    color: white;
+    font-size: 3em;
+}
+
+.contact-form {
+    max-width: 600px;
+    margin: 0 auto;
+    padding-top: 200px;
+    color: white;
+    border-radius: 12px;
+}
+
+.contact-form div {
+    margin-bottom: 20px;
+}
+
+.contact-form label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form select,
+.contact-form textarea {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 6px;
+    background-color: #223344;
+    color: white;
+    outline: none;
+}
+
+.contact-form select {
+    height: 40px;
+}
+
+.contact-form textarea {
+    resize: vertical;
+}
+
+.contact-form button {
+    padding: 12px 24px;
+    border: none;
+    border-radius: 6px;
+    background-color: #fff;
+    color: #001122;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.5s, color 0.5s, border 0.5s;
+}
+
+.contact-form button:hover {
+    background-color: #001122;
+    color: white;
+    border: 1px solid white;
+}
+
+/* Responsive design for the footer*/
+@media (max-width: 480px) {
+    .footer {
+        padding: 20px;
+    }
+
+    #personal,
+    #social {
+        margin-bottom: 15px;
+    }
+
+    #personal a,
+    #social a {
+        margin: 0 10px;
+        font-size: small;
+    }
+
+    #social a i {
+        font-size: 24px;
+    }
 }
