--- a/screen.css
+++ b/screen.css
@@ -245,14 +245,13 @@ section{
     border-radius: 5em;
     padding: 2em;
     line-height: 27px;
-    transition: box-shadow 0.5s, color 0.5s, background-color 0.5s, border 0.5s;
+    transition: box-shadow 0.5s, color 0.5s, background-color 0.5s;
     cursor: default;
 }
 
 .point div:hover{
     background-color: white;
     color: #001122;
-    border: #fff;
 }
 
 .point h4{
